fix gap entre élément sur edge / chrome

--- a/GRP10-projet-web/src/app/foot/foot.component.scss
+++ b/GRP10-projet-web/src/app/foot/foot.component.scss
@@ -9,11 +9,8 @@ footer {
     //affichage flex en ligne avec retour ligne
 	display: flex;
 	flex-direction: row;
-	justify-content: space-evenly;
+	justify-content: space-around;
     flex-wrap: wrap;
-    
-    //espace minimal entre les colonnes, permet de ne pas avoir de marge en cas de retour à la ligne
-    column-gap: 40px;
 }
 
 
@@ -21,7 +18,7 @@ footer {
     //style des containers de liens
     margin: 0px;
     text-align: center;
-    padding: 10px;
+    padding: 10px 20px;
     
     //style du lien revenir en haut
     color: var(--medium-dark-color);
