--- a/GRP10-projet-web/src/app/participation/participation.component.scss
+++ b/GRP10-projet-web/src/app/participation/participation.component.scss
@@ -17,7 +17,7 @@
     //affichage en ligne
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .participation_info {
